--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        Jadilah Kuat, Sebat Jika Kau Lemah Kau Tidak Akan Di Hargai
+                        Jadilah Kuat, Sebab Jika Kau Lemah Kau Tidak Akan Di Hargai.
                       </p>
                     </div>
                   </div>
@@ -389,7 +389,7 @@
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        Jadilah Bebas,Lakukan Sesuatu Dengan Kenhendakmu Sendiri
+                        Jadilah Bebas,Lakukan Sesuatu Dengan Kenhendakmu Sendiri.
                       </p>
                     </div>
                   </div>
