--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(foto/sunset\ ravens.png)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(foto/KageNo.jpg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
